Add vault preset (#833)
* feat: add vault preset

chore: add swagger

chore: add vault to registry

chore: update readme

chore: update readme

chore: add tests

* Update preset/vault/options.go


* docs: vault supports arm64

* fix: remove TokenCreate option and create two helper funcs

* fix: remove obsolete data from vault testdata

* docs: update readme to reflect changes

---------
